# starscout

./: .gitignore  README.md
.cursor/rules/: git-auto-commit.mdc  global.mdc  location.mdc  nextjs.mdc  no-comments.mdc  python.mdc  shadcn.mdc
backend/: .env.example  docker-compose.yml  pyproject.toml  run.sh  starscout-backend.service
backend-rust/: Cargo.toml  README.md
backend-rust/migrations/: 000_initial_schema.sql
backend-rust/src/: app_state.rs  config.rs  extractors.rs  init.rs  lib.rs  main.rs
backend-rust/src/db/: database.rs  mod.rs
backend-rust/src/embedding/: mod.rs  openai.rs
backend-rust/src/github/: client.rs  mod.rs
backend-rust/src/handlers/: health.rs  jobs.rs  mod.rs  search.rs  settings.rs  stars.rs  user_exists.rs
backend-rust/src/middleware/: auth.rs  mod.rs
backend-rust/src/services/: job_manager.rs  mod.rs  semantic_search_manager.rs
backend-rust/src/types/: mod.rs  oauth_cache.rs  repository.rs  user_job.rs
backend/scripts/: sqlx_prepare.sh
backend/src/: config.rs  init.rs  lib.rs
backend/src/db/: connection.rs
backend/src/github/: mod.rs
backend/src/github_semantic_search/: embedding.py  github_client.py  job_manager.py  log.py  main.py  repo_manager.py  settings.py  shared_state.py
backend/src/github_semantic_search/core/: __init__.py  models.py
backend/src/github_semantic_search/db/: database.py
backend/src/github_semantic_search/db/migrations/: 000_initial_schema.sql  __init__.py
backend/src/handlers/: jobs.rs  search.rs  settings.rs  stars.rs
backend/src/http/: responses.rs
backend/src/middleware/: user_key_extractor.rs
backend/src/services/: job_manager.rs  semantic_search_manager.rs
backend/src/types/: user_job.rs
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  twitter-image.tsx
frontend/src/components/: providers.tsx
frontend/src/components/auth/: SignInButton.tsx
frontend/src/components/error/: ErrorBoundary.tsx
frontend/src/components/github/: ProcessingStatus.tsx
frontend/src/components/landing/: LandingContent.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx  PageSkeleton.tsx  SafePageContent.tsx
frontend/src/components/maintenance/: MaintenancePage.tsx
frontend/src/components/onboarding/: OnboardingContent.tsx
frontend/src/components/repository/: RepositoryCard.tsx  RepositoryCardSkeleton.tsx
frontend/src/components/search/: ApiKeyInput.tsx  (+4 more)
frontend/src/hooks/: useAppSettings.ts  useBackendHealth.ts  useGithubStars.ts  useInitialization.ts  useLocalStorage.ts  usePolling.ts  useRateLimit.ts  useSearchCache.ts  useSwrApi.ts  useUserExists.ts
frontend/src/lib/: api-client.ts  api-error-utils.ts  headers.ts  metadata.ts  repository-utils.ts  swr-config.ts  utils.ts
frontend/src/types/: github.ts  next-auth.d.ts
(+4 files in other folders)
