[package]
name = "starscout-backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "starscout_backend"
path = "src/lib.rs"

[dependencies]
async-openai = { version = "0.29.0", default-features = false, features = [
    "rustls",
] }
async-trait = "0.1.88"
base64 = "0.22.0"
axum = { version = "0.8.4", features = ["tower-log", "macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
dotenvy = "0.15.7"
oauth2 = "5.0.0"
octocrab = "0.40.0"
pgvector = { version = "0.4.1", features = ["sqlx"] }
reqwest = { version = "0.12.21", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "migrate",
    "rust_decimal",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "json",
] }
tower = { version = "0.5.2", features = ["limit"] }
tower_governor = { version = "0.7.0", features = ["tracing"] }
http = "1.3.1"
dashmap = "5"
anyhow = "1.0"
rust_decimal = { version = "1.37.1", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.140"
wiremock = "0.6.4"
insta = "1.32.0"
jsonschema = "0.16.0"
